Update 2699. Modify Graph Edge Weights.md

--- a/Hard/2699/2699. Modify Graph Edge Weights.md
+++ b/Hard/2699/2699. Modify Graph Edge Weights.md
@@ -1,158 +1,184 @@
 ### Intuition
-So We're given an undirected weighted graph with n nodes, where some edges have positive weights and others have a weight of -1. Our job is to modify the -1 weight edges by assigning them positive integer values, with the goal of making the shortest path between two specific nodes (source and destination) equal to a given target distance.
+So we have an undirected weighted graph which have n nodes where some edges have positive weights and others have a weight of -1. Our job is to change the -1 weight edges by giving them the positive integer values, we need to make the shortest path between two specific nodes (source and destination) equal to the given target distance. At first, you may think that this problem is a variation of the shortest path problem, but we're not just finding the shortest path  we're actually manipulating the graph to get a specific shortest path length. You might think to use Dijkstra's algorithm However just think for a min, because of the presence of -1 weights and the need to modify them. We can't simply run Dijkstra's algorithm for once and be done with it. We need to find a way to assign weights to the -1 edges to meet our target distance.
 
-At first, this problem may appear like a variation of the shortest path problem, but we're not just finding the shortest path; we're actually manipulating the graph to achieve a specific shortest path length. You might immediately say that we can use Dijkstra's algorithm However just think for a min, because of the presence of -1 weights and the need to modify them. We can't simply run Dijkstra's algorithm once and be done with it. We need to find a way to assign weights to the -1 edges to meet our target distance.
+Now lets take a look at the constraints  We can only modify edges with -1 weights, and we must assign them positive integer values between 1 and $2 * 10^9$. This gives us a wide range to work with, but it also means we need to be careful not to overflow our integer values. 
 
-The constraints of the problem are also important to consider. We can only modify edges with -1 weights, and we must assign them positive integer values between 1 and $2 * 10^9$. This gives us a wide range to work with, but also means we need to be careful not to overflow our integer values. 
+lets take an example and try to Imagine that you're a city planner and your job is  redesigning a road network. You have a map of existing roads (edges) connecting various locations (nodes). Some of the roads have fixed lengths while others are still in there planning phase (represented by -1 weights). Your job is to find out  the lengths of these planned roads so that the shortest route between two specific locations matches a target distance. now we can't alter the existing roads, but we have the freedom to set the lengths of the planned ones. This constraint adds a layer of complexity which makes it different from standard shortest path problems.
+I was also thinking of the basic Dijkstra's algorithm. It's the first solution that comes to mind for finding shortest paths in weighted graphs I considered a naive approach to try all possible combinations of weights for the -1 edges But this wasnt practical I mean it would have worked but with potentially many -1 edges and a large range of possible weights, the number of combinations would be vary large So instead of trying all possibilities what if we could iteratively adjust the weights based on the current shortest path, we might need to run Dijkstra's algorithm multiple times. Because each time we modify an edge weight, it could potentially change the shortest path in the graph. By running it first with only the fixed-weight edges, we could get a baseline shortest path this info would then guide us in assigning weights to the -1 edges in a second pass, try to think about a two-phase approach:
 
-Try to Imagine that you're a city planner tasked with redesigning a road network. You have a map of existing roads (edges) connecting various locations (nodes). Some roads have fixed lengths, while others are still in the planning phase (represented by -1 weights). Your goal is to determine the lengths of these planned roads so that the shortest route between two specific locations matches a target distance.
-We can't alter the existing roads, but we have the freedom to set the lengths of the planned ones. This constraint adds a layer of complexity that sets it apart from standard shortest path problems.
-I was also thinking of the basic Dijkstra's algorithm. It's the go-to solution for finding shortest paths in weighted graphs. I considered a naive approach: try all possible combinations of weights for the -1 edges. But this seemed impractical I mean it would have worked but With potentially many -1 edges and a large range of possible weights, the number of combinations would be astronomical, So instead of trying all possibilities, what if we could iteratively adjust the weights based on the current shortest path? I realized that we might need to run Dijkstra's algorithm multiple times. Why? Because each time we modify an edge weight, it could potentially change the shortest path in the graph. By running it first with only the fixed-weight edges, we could get a baseline shortest path. This information would then guide us in assigning weights to the -1 edges in a second pass. This led me to think about a two-phase approach:
+First, we run Dijkstra's algorithm with all -1 weights which are set to 1 (the minimum possible weight). This will gives us the shortest possible path in the graph and If this shortest path is already longer than our target distance, we know it's impossible to solve the problem, and we will simply return an empty array  If the shortest path is shorter than our target, we need to increase some of the -1 weights. But how do we know which ones to increase and by how much for that we can run Dijkstra's algorithm again, but this time, whenever we encounter a -1 edge, we can try to increase its weight just enough to make the path to that node equal to the target distance minus the remaining distance to the destination.
 
->1. First, we run Dijkstra's algorithm with all -1 weights set to 1 (the minimum possible weight). This gives us the shortest possible path in the graph.
+But what if increasing one edge makes another path shorter for that we need to be careful to always maintain the invariant that no path becomes shorter than our target distance. Use two distance arrays where one is for the minimum possible distances (with all -1 weights set to 1) and another is for the distances as we're modifying the weights. By comparing these two arrays  we can make sure that we're always increasing the total path length and never decreasing it.
 
->2. If this shortest path is already longer than our target distance, we know it's impossible to solve the problem, and we can return an empty array.
+The use of a priority queue in Dijkstra's algorithm is also helpful although we require additional memory for the priority queue but still It would allow us to always process the node with the shortest current distance while making our weight assignments more efficient. I was thinking if one would need to keep track of not just the nodes, but also the edges so We can use an adjacency list representation of the graph, where each entry in the list contains both the neighboring node and the index of the edge in the original edge list, now think how to handle cases where multiple modifications could lead to the target distance. The problem statement allows for any valid solution, which gives us some flexibility. We can simply stop once we've found a valid configuration, rather than trying to enumerate all possible solutions.
 
->3. If the shortest path is shorter than our target, we need to increase some of the -1 weights. But how do we know which ones to increase and by how much?
 
-We can run Dijkstra's algorithm again, but this time, whenever we encounter a -1 edge, we can try to increase its weight just enough to make the path to that node equal to the target distance minus the remaining distance to the destination.
-
-But there's a catch: what if increasing one edge makes another path shorter? We need to be careful to always maintain the invariant that no path becomes shorter than our target distance. This led me to think about using two distance arrays: one for the minimum possible distances (with all -1 weights set to 1), and another for the distances as we're modifying the weights. By comparing these two arrays, we can ensure that we're always increasing the total path length, never decreasing it.
-
-The use of a priority queue in Dijkstra's algorithm also seemed helpful although we require additional memory for the priority queue but still It would allow us to always process the node with the shortest current distance, making our weight assignments more efficient. I was thinking if one would need to keep track of not just the nodes, but also the edges. We can use an adjacency list representation of the graph, where each entry in the list contains both the neighboring node and the index of the edge in the original edge list.
-
-Then finally thnik about trying to figure out how to handle cases where multiple modifications could lead to the target distance. The problem statement allows for any valid solution, which gives us some flexibility. We can simply stop once we've found a valid configuration, rather than trying to enumerate all possible solutions.
-
-Handling Edge Cases:
-
-1. What if the initial shortest path is already too long? We address this by immediately returning an empty array, signaling that no solution is possible.
-
-2. How do we ensure we don't assign weights greater than the allowed maximum (2 * 10^9)? By starting with minimum weights (1) and only increasing them as necessary, we minimize this risk. In practice, it's highly unlikely we'd ever approach the maximum allowed weight.
-
-3. What if multiple solutions exist? Our approach will find one valid solution, which is sufficient according to the problem statement. However, it's worth noting that there could be many ways to assign weights that satisfy the target distance.
-
-4. How do we handle disconnected graphs? The problem statement guarantees a connected graph, but in a real-world scenario, we'd need to add checks for this.
+ What if the initial shortest path is already too long  we address this by immediately returning an empty array, saying that no solution is possible.
+ How do we make sure that we don't assign weights greater than the allowed maximum (2 * 10^9) we can do this By starting with minimum weights (1) and only increasing them as necessary, we minimize this risk. In practice, it's highly unlikely we'd ever approach the maximum allowed weight.
+What if multiple solutions exist, Our approach will find one valid solution, which is sufficient according to the problem statement. However, note that there could be many ways to assign weights that satisfy the target distance. And to handle disconnected graphs The problem statement guarantees a connected graph
 
 Mathematical Insights:
 
-The core mathematical insight here is the relationship between edge weights and path lengths. By understanding that the total path length is simply the sum of its edge weights, we can treat our problem as a type of equation:
+The core mathematical insight here is the relationship between edge weights and path lengths, try to understand that the total path length is simply the sum of its edge weights, we can treat our problem as a type of equation:
 
 (Sum of fixed-weight edges) + (Sum of adjustable-weight edges) = Target Distance
 
-This formulation allows us to see that we're essentially solving for the "Sum of adjustable-weight edges" term. 
+so we're essentially solving for the "Sum of adjustable-weight edges" term. 
 
 
 ---
 # Approach
 
-To solve this problem, we'll implement a two-phase approach using a modified version of Dijkstra's algorithm:
+#### 1. Problem Statement
 
-1. Graph Representation:
-   - Create an adjacency list representation of the graph.
-   - Each entry in the adjacency list will contain two pieces of information: the neighboring node and the index of the edge in the original edge list.
-   - This allows us to quickly look up and modify edge weights as needed.
+We are given an undirected graph G = (V, E) with n nodes and m edges. Each edge e ∈ E has a weight w(e) which is either a positive integer or -1. We are also given a source node s, a destination node t, and a target distance T. Our task is to modify the weights of edges with w(e) = -1 to positive integers such that the shortest path from s to t has a length exactly equal to T, or determine that no such modification is possible.
 
-```
-function createAdjacencyList(n, edges):
-    adjacencyList = array of n empty lists
-    for each edge in edges:
-        nodeA, nodeB, weight = edge
-        add (nodeB, edgeIndex) to adjacencyList[nodeA]
-        add (nodeA, edgeIndex) to adjacencyList[nodeB]
-    return adjacencyList
-```
+#### 2. High-Level Approach
 
-2. Distance Arrays:
-   - Create two 2D distance arrays, both of size n x 2.
-   - The first dimension represents the node, and the second dimension represents the two phases of our algorithm.
-   - Initialize all distances to infinity, except for the source node which starts at 0.
+Our solution uses a two-phase approach based on Dijkstra's algorithm:
 
-```
-function initializeDistances(n, source):
-    distances = 2D array of size n x 2, filled with infinity
-    distances[source][0] = distances[source][1] = 0
-    return distances
-```
+1. Run Dijkstra's algorithm with all -1 weights set to 1 to find the minimum possible shortest path.
+2. Run a modified version of Dijkstra's algorithm to adjust -1 weights to achieve the target distance T.
 
-3. First Dijkstra Run:
-   - Run Dijkstra's algorithm with all -1 weights treated as 1.
-   - This gives us the shortest possible path in the graph.
-   - Store these distances in the first column of our distances array.
 
-4. Check Feasibility:
-   - If the shortest path to the destination is longer than the target, return an empty array (impossible to solve).
-   - If the shortest path equals the target, we're done - set all -1 weights to a large value and return.
+### 3.1 First Phase: Initial Dijkstra's Algorithm
 
-5. Second Dijkstra Run:
-   - Run a modified version of Dijkstra's algorithm again.
-   - This time, when we encounter a -1 edge, we try to increase its weight to make the path to that node equal to the target minus the remaining distance to the destination.
-   - Store these new distances in the second column of our distances array.
+In this phase, we run Dijkstra's algorithm on the graph with all -1 weights set to 1. This gives us the shortest possible path from s to t.
 
-pseudocode 
-```
-function modifiedDijkstra(adjacencyList, edges, distances, source, difference, run):
-    priorityQueue = new PriorityQueue()
-    priorityQueue.add((source, 0))
+```pseudo
+function initialDijkstra(G, s, t):
+    for each vertex v in G:
+        distance[v] = INFINITY
+        predecessor[v] = NULL
     
-    while priorityQueue is not empty:
-        currentNode, currentDistance = priorityQueue.poll()
-        
-        if currentDistance > distances[currentNode][run]:
-            continue
-        
-        for each (nextNode, edgeIndex) in adjacencyList[currentNode]:
-            weight = edges[edgeIndex][2]
-            
-            if weight == -1:
+    distance[s] = 0
+    Q = priority_queue()
+    Q.insert(s, 0)
+    
+    while Q is not empty:
+        u = Q.extract_min()
+        for each neighbor v of u:
+            if weight(u, v) == -1:
                 weight = 1
+            else:
+                weight = weight(u, v)
             
-            if run == 1 and edges[edgeIndex][2] == -1:
-                newWeight = difference + distances[nextNode][0] - distances[currentNode][1]
-                if newWeight > weight:
-                    edges[edgeIndex][2] = weight = newWeight
+            if distance[v] > distance[u] + weight:
+                distance[v] = distance[u] + weight
+                predecessor[v] = u
+                Q.insert(v, distance[v])
+    
+    return distance, predecessor
+```
+
+This function returns two arrays:
+- `distance`: Contains the shortest distance from s to each node
+- `predecessor`: Contains the predecessor of each node in the shortest path
+
+#### 3.2 Feasibility Check
+
+After the initial Dijkstra's run, we check if it's possible to achieve the target distance T:
+
+```pseudo
+if distance[t] > T:
+    return "No solution possible"
+```
+
+If the shortest possible path (with all -1 weights set to 1) is already longer than T, it's impossible to achieve T by increasing weights.
+
+#### 3.3 Second Phase: Modified Dijkstra's Algorithm
+
+If the initial check passes, we run a modified version of Dijkstra's algorithm to adjust the -1 weights:
+
+```pseudo
+function modifiedDijkstra(G, s, t, T, initialDistance):
+    for each vertex v in G:
+        distance[v] = INFINITY
+        predecessor[v] = NULL
+    
+    distance[s] = 0
+    Q = priority_queue()
+    Q.insert(s, 0)
+    
+    while Q is not empty:
+        u = Q.extract_min()
+        for each neighbor v of u:
+            if weight(u, v) == -1:
+                weight = max(1, T + initialDistance[u] - distance[v] - (initialDistance[t] - initialDistance[u]))
+                setWeight(u, v, weight)
+            else:
+                weight = weight(u, v)
             
-            if distances[nextNode][run] > distances[currentNode][run] + weight:
-                distances[nextNode][run] = distances[currentNode][run] + weight
-                priorityQueue.add((nextNode, distances[nextNode][run]))
+            if distance[v] > distance[u] + weight:
+                distance[v] = distance[u] + weight
+                predecessor[v] = u
+                Q.insert(v, distance[v])
+    
+    return distance, predecessor
 ```
 
-6. Final Check:
-   - After the second Dijkstra run, check if the new shortest path to the destination equals the target.
-   - If it doesn't, return an empty array (impossible to solve).
+The key difference in this modified version is how we handle -1 weights. Instead of setting them to 1, we calculate a new weight that helps us achieve the target distance T.
 
-7. Update Edges:
-   - Go through all edges one last time.
-   - Set any remaining -1 weights to 1.
-   - Return the modified edge list.
+#### 3.4 Weight Calculation
 
-```
-function updateEdges(edges):
-    for each edge in edges:
-        if edge[2] == -1:
-            edge[2] = 1
-    return edges
+The weight calculation is the core of our algorithm:
+
+```pseudo
+weight = max(1, T + initialDistance[u] - distance[v] - (initialDistance[t] - initialDistance[u]))
 ```
 
-The main function that ties all these steps together would look like this:
+Let's break down this formula:
 
+- `T`: Our target distance
+- `initialDistance[u]`: The shortest distance from s to u in the initial Dijkstra's run
+- `distance[v]`: The current shortest distance from s to v in this modified run
+- `initialDistance[t]`: The shortest distance from s to t in the initial run
+
+This formula ensures that:
+1. We never set a weight less than 1
+2. We increase the weight just enough to make the path through this edge potentially achieve the target distance T
+
+#### 3.5 Final Check
+
+After the modified Dijkstra's run, we perform a final check:
+
+```pseudo
+if distance[t] != T:
+    return "No solution possible"
+else:
+    return modifiedGraph
 ```
-function modifiedGraphEdges(n, edges, source, destination, target):
-    adjacencyList = createAdjacencyList(n, edges)
-    distances = initializeDistances(n, source)
-    
-    modifiedDijkstra(adjacencyList, edges, distances, source, 0, 0)
-    
-    difference = target - distances[destination][0]
-    if difference < 0:
-        return empty array
-    
-    modifiedDijkstra(adjacencyList, edges, distances, source, difference, 1)
-    
-    if distances[destination][1] < target:
-        return empty array
-    
-    return updateEdges(edges)
-```
+
+If we couldn't achieve exactly T, we return that no solution is possible. Otherwise, we return the modified graph.
+
+
+
+#### 4.1 Correctness
+
+The correctness of our algorithm relies on two key invariants:
+
+1. For any vertex v, the distance to v in the modified run is always greater than or equal to the distance in the initial run.
+2. The shortest path from s to t in the modified graph is always at least T.
+
+These invariants ensure that we're always increasing path lengths and never decreasing them below T.
+
+Our algorithm is optimal in the sense that it never increases edge weights more than necessary. It processes vertices in order of increasing distance, ensuring that we only increase weights when absolutely needed to achieve T.
+
+
+The algorithm is guaranteed to terminate because:
+1. Dijkstra's algorithm processes each vertex exactly once
+2. The number of vertices is finite
+3. Edge weights are increased monotonically
+
+
+
+#### 7. Handling Edge Cases
+
+
+If s = t, we simply need to check if T = 0. If so, we return the original graph. If not, no solution is possible. 
+If there are no -1 weight edges, our algorithm degenerates to standard Dijkstra's algorithm. We just need to check if the shortest path equals T. 
+If the graph is disconnected and t is not reachable from s, our initial Dijkstra's run will set distance[t] to INFINITY, and we'll correctly report that no solution is possible.
+
 
 
 # Complexity
@@ -734,7 +760,94 @@ The final graph has the following structure:
 - Edge [4,3] with weight 1
 
 This configuration achieves the target shortest path distance of 5 from node 0 to node 1.
+####  Example 2
 
+**Initial Setup**
+* The example has a graph with 3 nodes (0 to 2) and edges represented as `[[0,1,-1],[0,2,5]]`.
+* The source node is 0, the destination node is 2, and the target distance is 6.
+* One edge (from 0 to 1) has weight -1 and can be modified to a positive integer value.
+
+**Step 1: Build the Graph**
+* An initial graph is created with the fixed-weight edge:
+  - Edge from 0 to 2 with weight 5
+* The -1 weight edge (0 to 1) is not added at this stage.
+
+**Step 2: Compute Initial Shortest Distance**
+* Dijkstra's algorithm is run on the initial graph.
+* The shortest path from 0 to 2 is the direct edge with weight 5.
+* This initial distance (5) is less than the target (6), so the algorithm continues.
+
+**Step 3: Adjust Edge Weights**
+The algorithm processes each edge:
+1. Edge [0,1,-1]:
+   * This edge is not on the current shortest path to the destination.
+   * Modifying this edge won't affect the shortest path from 0 to 2.
+   * The algorithm can't use this edge to increase the path length to 6.
+2. Edge [0,2,5]:
+   * This edge has a fixed weight and cannot be modified.
+
+**Final Check**
+* The shortest path from source (0) to destination (2) has a distance of 5.
+* This is less than the target distance of 6.
+* There are no modifiable edges on the path that can be adjusted to reach the target.
+
+**Conclusion**
+* It's impossible to achieve the target distance of 6 from node 0 to node 2.
+* The algorithm correctly returns an empty array, indicating no solution exists.
+
+It's impossible because The only direct path from 0 to 2 has a fixed weight of 5. The only modifiable edge (0 to 1) is not on any path to node 2. Even if we set the weight of edge [0,1] to any positive value, it won't affect the shortest path to node 2. There's no way to increase the path length from 5 to 6 given these constraints.
+
+#### Example 3
+
+**Initial Setup**
+* The example has a graph with 4 nodes (0 to 3) and edges represented as `[[1,0,4],[1,2,3],[2,3,5],[0,3,-1]]`.
+* The source node is 0, the destination node is 2, and the target distance is 6.
+* One edge (from 0 to 3) has weight -1 and can be modified to a positive integer value.
+
+**Step 1: Build the Graph**
+* An initial graph is created with the fixed-weight edges:
+  - Edge from 1 to 0 with weight 4
+  - Edge from 1 to 2 with weight 3
+  - Edge from 2 to 3 with weight 5
+* The -1 weight edge (0 to 3) is not added at this stage.
+
+**Step 2: Compute Initial Shortest Distance**
+* Dijkstra's algorithm is run on the initial graph.
+* The shortest path from 0 to 2 is 0 -> 1 -> 2 with a total weight of 7 (4 + 3).
+* This initial distance (7) is greater than the target (6), so the algorithm continues.
+
+**Step 3: Adjust Edge Weights**
+The algorithm processes each edge:
+1. Edges [1,0,4], [1,2,3], and [2,3,5]:
+   * These edges have fixed weights and cannot be modified.
+2. Edge [0,3,-1]:
+   * This edge can be modified to create a potentially shorter path.
+   * The algorithm calculates the optimal weight for this edge:
+     - Current shortest path: 0 -> 1 -> 2 (distance 7)
+     - Potential new path: 0 -> 3 -> 2
+     - To achieve target distance 6: weight([0,3]) + weight([2,3]) = 6
+     - Therefore, weight([0,3]) = 6 - 5 = 1
+
+**Final Adjustment**
+* The weight of edge [0,3] is set to 1.
+* This creates a new shortest path: 0 -> 3 -> 2 with a total distance of 6 (1 + 5).
+
+**Final Check**
+* The new shortest path from source (0) to destination (2) has a distance of 6.
+* This matches the target distance of 6.
+
+**Final Graph**
+The final graph has the following structure:
+* Edge [1,0] with weight 4 (unchanged)
+* Edge [1,2] with weight 3 (unchanged)
+* Edge [2,3] with weight 5 (unchanged)
+* Edge [0,3] with weight 1 (adjusted from -1)
+
+**Conclusion**
+* The algorithm successfully modifies the graph to achieve the target shortest path distance of 6 from node 0 to node 2.
+* It returns the modified edge list: `[[1,0,4],[1,2,3],[2,3,5],[0,3,1]]`.
+
+It works because The initial shortest path was longer than the target, allowing room for optimization. Modifying the [0,3] edge created a new, shorter path that exactly matches the target distance. The algorithm correctly identified the optimal weight for the modifiable edge to achieve the desired result.
 
 ---
 ### Mathematical Justification
